--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -9,16 +9,56 @@ info:
     - BR-STORAGE-001 to BR-STORAGE-020: Audit write API
     - BR-STORAGE-021: Incident query API (READ)
     - BR-STORAGE-024: RFC 7807 error responses
+    - BR-AUDIT-006: Legal hold capability (SOC2 Gap #8)
 
     **Design Decisions**:
     - ADR-031: OpenAPI 3.0+ specification for all stateless REST APIs
     - ADR-032: Data Access Layer Isolation (only Data Storage connects to PostgreSQL)
     - DD-009: Dead Letter Queue fallback on database errors
+    - DD-AUTH-004: OAuth-proxy sidecar for authentication/authorization
+    - DD-AUTH-005: Client authentication pattern (ServiceAccount tokens)
 
     **Architecture**:
     This service is the **ONLY** service that directly accesses PostgreSQL.
     All other services (Context API, Effectiveness Monitor, etc.) access data
     through this REST API Gateway.
+
+    **Authentication & Authorization (Production/E2E)**:
+    All requests to DataStorage are protected by an OAuth-proxy sidecar:
+    
+    1. **Client Authentication**: Services authenticate with Kubernetes ServiceAccount tokens
+       - Token mounted at: `/var/run/secrets/kubernetes.io/serviceaccount/token`
+       - Clients inject: `Authorization: Bearer <token>` header
+       - See DD-AUTH-005 for client implementation patterns
+    
+    2. **OAuth-Proxy Validation**: The sidecar validates requests
+       - Validates JWT token signature and expiration
+       - Performs Subject Access Review (SAR) to check RBAC permissions
+       - Injects `X-Auth-Request-User` header with authenticated user identity
+       - Returns HTTP 401 if token invalid, HTTP 403 if SAR fails
+    
+    3. **Handler Enforcement**: DataStorage handlers extract user identity
+       - Legal hold operations REQUIRE `X-Auth-Request-User` header
+       - HTTP 401 returned if header missing (authentication failed)
+       - User identity stored in audit events for SOC2 compliance
+    
+    **Routing Flow**:
+    ```
+    Client → data-storage-service:8080 (Service)
+           ↓
+         oauth-proxy:8080 (validates token + SAR)
+           ↓
+         DataStorage:8081 (X-Auth-Request-User header)
+    ```
+    
+    **Integration Tests**:
+    Integration tests run without oauth-proxy. Use `testutil.NewMockUserTransport()`
+    to inject mock `X-Auth-Request-User` headers directly.
+    
+    **SOC2 Compliance**:
+    - All legal hold operations attributed to authenticated users
+    - Audit trail captures placed_by/released_by from X-Auth-Request-User
+    - Unauthorized access blocked at oauth-proxy layer (defense-in-depth)
   contact:
     name: Kubernaut Platform Team
     url: https://github.com/jordigilh/kubernaut
@@ -615,7 +655,7 @@ paths:
         - `datastorage_legal_hold_failures_total{reason="missing_correlation_id|unauthorized|..."}`
       operationId: placeLegalHold
       security:
-        - userIdHeader: []
+        - oauthProxyAuth: []
       requestBody:
         required: true
         content:
@@ -742,7 +782,7 @@ paths:
         - `datastorage_legal_hold_failures_total{reason="unauthorized|not_found|..."}`
       operationId: releaseLegalHold
       security:
-        - userIdHeader: []
+        - oauthProxyAuth: []
       parameters:
         - name: correlation_id
           in: path
@@ -1668,16 +1708,46 @@ components:
           description: "Who is disabling the workflow"
 
   securitySchemes:
-    userIdHeader:
+    oauthProxyAuth:
       type: apiKey
       in: header
-      name: X-User-ID
+      name: X-Auth-Request-User
       description: |
-        User ID for authorization tracking (legal hold operations).
-        
+        Authenticated user identity injected by OAuth-proxy sidecar.
+
         **Business Requirement**: BR-AUDIT-006 (Legal Hold & Retention)
         **SOC2 Gap**: Gap #8 (Audit trail for legal hold placement/release)
-        
-        This header is required for legal hold operations to track who placed
-        or released a legal hold for compliance and audit purposes.
+        **Design Decision**: DD-AUTH-004 (OAuth-proxy sidecar authentication)
+
+        **How It Works**:
+        1. Clients send requests with `Authorization: Bearer <ServiceAccount-token>`
+        2. OAuth-proxy validates JWT token and checks RBAC (Subject Access Review)
+        3. OAuth-proxy injects `X-Auth-Request-User` header with authenticated identity
+        4. DataStorage handlers extract user identity for audit trail attribution
+
+        **Production/E2E Behavior**:
+        - OAuth-proxy automatically injects this header after successful authentication
+        - Clients do NOT manually set this header
+        - DataStorage handlers return HTTP 401 if header missing
+
+        **Integration Test Behavior**:
+        - Tests run without oauth-proxy sidecar
+        - Tests use `testutil.NewMockUserTransport()` to inject mock header
+        - Example: `X-Auth-Request-User: test-service@integration.test`
+
+        **Header Value Format**:
+        - ServiceAccount format: `system:serviceaccount:<namespace>:<name>`
+        - Example: `system:serviceaccount:kubernaut-system:gateway-service`
+        - Integration test format: `<service-name>@integration.test`
+
+        **SOC2 Compliance**:
+        This header enables attribution of legal hold operations to specific
+        authenticated users, meeting SOC2 CC8.1 (tamper-evident logs) and
+        AU-9 (protection of audit information) requirements.
+
+        **See Also**:
+        - DD-AUTH-005: Client authentication pattern documentation
+        - deploy/data-storage/deployment.yaml: OAuth-proxy configuration
+        - pkg/shared/auth/transport.go: Go client authentication
+        - holmesgpt-api/src/clients/datastorage_auth_session.py: Python client
 
