--- a/deploy/holmesgpt-api/06-deployment.yaml
+++ b/deploy/holmesgpt-api/06-deployment.yaml
@@ -33,14 +33,59 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       containers:
+      # DD-AUTH-006: OAuth-proxy sidecar for authentication/authorization
+      # Same pattern as DataStorage (DD-AUTH-004)
+      - name: oauth-proxy
+        image: quay.io/openshift/oauth-proxy:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+          - name: proxy
+            containerPort: 8080
+            protocol: TCP
+        args:
+          - --https-address=
+          - --http-address=0.0.0.0:8080
+          - --upstream=http://localhost:8081
+          - --provider=openshift
+          - --openshift-service-account=holmesgpt-api
+          - --cookie-secret-file=/etc/oauth-proxy/cookie-secret
+          - --cookie-name=_oauth_proxy_hapi
+          - --cookie-expire=24h0m0s
+          - --email-domain=*
+          - --skip-provider-button=true
+          # DD-AUTH-006: SAR for HAPI - Only Gateway can call HAPI
+          - --openshift-sar={"namespace":"kubernaut-system","resource":"services","resourceName":"holmesgpt-api","verb":"get"}
+          # Pass user identity to HAPI (cost tracking, audit trail)
+          - --set-xauthrequest=true
+        volumeMounts:
+          - name: oauth-proxy-cookie-secret
+            mountPath: /etc/oauth-proxy
+            readOnly: true
+        resources:
+          requests:
+            cpu: 10m
+            memory: 20Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - ALL
       - name: holmesgpt-api
         image: quay.io/jordigilh/kubernaut-holmesgpt-api:v1.0.4-amd64
         imagePullPolicy: Always
         ports:
+          # DD-AUTH-006: Changed from 8080 to 8081 (internal port, behind oauth-proxy)
           - name: http
-            containerPort: 8080
+            containerPort: 8081
             protocol: TCP
         env:
+          # DD-AUTH-006: HAPI listens on 8081 (oauth-proxy proxies 8080 → 8081)
+          - name: API_PORT
+            value: "8081"
           # Configuration file location
           - name: CONFIG_FILE
             value: /etc/holmesgpt/config.yaml
@@ -107,6 +152,13 @@ spec:
         secret:
           secretName: holmesgpt-api-llm-credentials
           optional: true
+      # DD-AUTH-006: OAuth-proxy cookie secret for session management
+      - name: oauth-proxy-cookie-secret
+        secret:
+          secretName: holmesgpt-api-oauth-proxy-secret
+          items:
+            - key: cookie-secret
+              path: cookie-secret
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
