feat(auth): Create oauth-proxy secret for holmesgpt-api
Phase 9.2 COMPLETE: OAuth-proxy secret created.

Created: deploy/holmesgpt-api/13-oauth-proxy-secret.yaml
- Secret name: holmesgpt-api-oauth-proxy-secret
- Contains: cookie-secret for session management
- Placeholder value (REPLACE_ME_WITH_RANDOM_32_BYTE_BASE64_STRING)
- Production: Generate with 'openssl rand -base64 32'

Updated: deploy/holmesgpt-api/kustomization.yaml
- Added 13-oauth-proxy-secret.yaml to resources list

Security Notes:
- Cookie secret used by oauth-proxy to sign/encrypt session cookies
- Must be different per service (HAPI vs DataStorage)
- Must be different per environment (dev/staging/prod)
- Should be rotated periodically (every 90 days)
- Production: Use external secret management (Vault, AWS Secrets Manager)

Authority: DD-AUTH-006 (HAPI oauth-proxy integration)
Related: DD-AUTH-004 (DataStorage oauth-proxy pattern)
Phase: 9.2/9 complete

Next: Phase 9.3 (RBAC for Gateway → HAPI access)

--- a/deploy/holmesgpt-api/kustomization.yaml
+++ b/deploy/holmesgpt-api/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - 10-servicemonitor.yaml
   - 11-grafana-dashboard-configmap.yaml
   - 12-prometheus-rules.yaml
+  - 13-oauth-proxy-secret.yaml
 
 images:
   - name: holmesgpt-api
