feat(auth): Create RBAC for Gateway → HolmesGPT API access
Phase 9.3 COMPLETE: RBAC created for oauth-proxy authorization.

Created: deploy/holmesgpt-api/14-client-rbac.yaml
- ClusterRole: holmesgpt-api-client (defines "get" verb on service resource)
- RoleBinding: gateway-holmesgpt-api-client (grants Gateway access)

Updated: deploy/holmesgpt-api/kustomization.yaml
- Added 14-client-rbac.yaml to resources list

Authorization Flow:
1. Gateway sends request with ServiceAccount token (Authorization header)
2. OAuth-proxy validates token via K8s TokenReviewer API
3. OAuth-proxy performs Subject Access Review (SAR):
   - Can gateway-sa "get" holmesgpt-api service?
   - Uses ClusterRole holmesgpt-api-client
4. If SAR passes: OAuth-proxy injects X-Auth-Request-User header
5. If SAR fails: OAuth-proxy returns HTTP 403 Forbidden

Only Gateway Authorized:
- Gateway is the ONLY service that can call HAPI
- Other services (AIAnalysis, WorkflowExecution, etc.) NOT authorized
- Minimizes LLM API surface area
- Enables cost control and attribution

Security Benefits:
1. **Port-Forward Protection**: Even with kubectl port-forward, requests need:
   - Valid ServiceAccount token (from gateway-sa)
   - RBAC permission (only Gateway has it)
2. **LLM Cost Control**: Only authorized service can access expensive LLM
3. **User Attribution**: X-Auth-Request-User header enables cost tracking
4. **Future SOC2**: Ready if HAPI generates audit events

Future Expansion:
To add more services (e.g., AIAnalysis):
- Create new RoleBinding with aianalysis-sa subject
- No ClusterRole changes needed (reuse holmesgpt-api-client)

Authority: DD-AUTH-006 (HAPI oauth-proxy integration)
Related: DD-AUTH-004 (DataStorage oauth-proxy pattern)
Phase: 9.3/9 complete

Next: Phase 9.4 (Update Service routing to oauth-proxy)

--- a/deploy/holmesgpt-api/kustomization.yaml
+++ b/deploy/holmesgpt-api/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - 11-grafana-dashboard-configmap.yaml
   - 12-prometheus-rules.yaml
   - 13-oauth-proxy-secret.yaml
+  - 14-client-rbac.yaml
 
 images:
   - name: holmesgpt-api
