feat(soc2): Implement Day 9.1 - Audit export API with hash chain verification
Priority: 🏆 SOC2 Day 9.1 - Signed audit export (3-4 hours)
Status: ✅ Export API complete, digital signature placeholder

Business Requirement: BR-AUDIT-007 (Audit Export)
SOC2 Requirements: CC8.1 (Audit Export), AU-9 (Audit Protection)

Implementation Summary:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✅ OpenAPI spec: /api/v1/audit/export endpoint (GET)
✅ Repository: audit_export.go with hash chain verification
✅ Handler: audit_export_handler.go with RFC 7807 error handling
✅ Server registration: Export handler registered

New Files:
- pkg/datastorage/repository/audit_export.go (318 lines)
  - Export() method with query filtering
  - Per-event hash chain verification
  - Tamper detection and flagging
  - Export statistics and integrity percentages

- pkg/datastorage/server/audit_export_handler.go (280 lines)
  - GET /api/v1/audit/export handler
  - Query parameter parsing (start_time, end_time, correlation_id, etc.)
  - Authentication check (X-Auth-Request-User header)
  - JSON export format (CSV deferred)
  - Digital signature placeholder (TODO: Day 9.1 next task)

Features:
✅ Query filtering: time range, correlation_id, event_category
✅ Pagination: offset, limit (max 10,000 events per export)
✅ Hash chain verification: per-event hash_chain_valid flag
✅ Export metadata: timestamp, filters, signature, algorithm
✅ Tamper detection: broken_chain_events, tampered_event_ids
✅ Integrity statistics: chain_integrity_percentage
✅ Authentication: Requires X-Auth-Request-User header (oauth-proxy)
✅ Error handling: RFC 7807 problem details
✅ Export attribution: Tracks exported_by user

Export Response Structure:
- export_metadata: timestamp, format, filters, signature, exported_by
- events: array of audit events with hash_chain_valid flag
- hash_chain_verification: totals, valid/broken counts, integrity %

Hash Chain Verification Process:
1. Group events by correlation_id
2. Verify 

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1885,7 +1885,7 @@ components:
             signature:
               type: string
               description: Digital signature of export (base64-encoded)
-              example: "MEUCIQDv8F..."
+              example: "PLACEHOLDER_SIGNATURE"
             signature_algorithm:
               type: string
               description: Signature algorithm used
@@ -1938,9 +1938,6 @@ components:
               legal_hold:
                 type: boolean
                 description: Whether this event is under legal hold
-              created_at:
-                type: string
-                format: date-time
         hash_chain_verification:
           type: object
           required:
@@ -1963,7 +1960,7 @@ components:
               example: 0
             chain_integrity_percentage:
               type: number
-              format: float
+              format: double
               minimum: 0.0
               maximum: 100.0
               description: Percentage of events with valid chains
@@ -1974,10 +1971,9 @@ components:
               description: When verification was performed
             tampered_event_ids:
               type: array
-              description: UUIDs of tampered events (if any)
+              description: String UUIDs of tampered events (if any)
               items:
                 type: string
-                format: uuid
         detached_signature:
           type: string
           description: Detached PEM-encoded signature (if requested)
