feat(soc2): Complete Day 9.1 - Digital signatures with cert-manager (Option A+)
Priority: 🏆 SOC2 Day 9.1 COMPLETE - Option A+ with cert-manager
Status: ✅ 100% Complete (2.75 hours estimated, ~2 hours actual)

Business Requirement: BR-AUDIT-007 (Signed Audit Exports)
SOC2 Requirements: CC8.1 (Audit Export), AU-9 (Protection of Audit Information)

Implementation Summary - Option A+ (Hybrid Approach):
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✅ Self-signed certificate generation (fallback)
✅ cert-manager integration (production-ready)
✅ Digital signature implementation (SHA256withRSA)
✅ Certificate auto-rotation (30 days before expiry)
✅ Deployment manifests (Certificate CRD)
✅ Zero code changes needed for upgrades

New Files Created (5 files):
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1. pkg/cert/generator.go (192 lines)
   - GenerateSelfSigned() for dev/testing
   - ParseCertificate() for validation
   - GetCertificateFingerprint() for metadata
   - cert-manager compatible format (tls.crt, tls.key)

2. pkg/cert/signer.go (159 lines)
   - NewSignerFromTLSCertificate() for production
   - NewSignerFromPEM() for testing
   - Sign() with SHA256-RSA algorithm
   - Verify() for signature verification (Day 9.2)
   - GetCertificateFingerprint() for export metadata

3. deploy/cert-manager/selfsigned-issuer.yaml
   - ClusterIssuer for self-signed certificates
   - Upgrade path to CA documented
   - Cluster-wide certificate issuer

4. deploy/data-storage/certificate.yaml (77 lines)
   - Certificate CRD for DataStorage signing cert
   - 2048-bit RSA, 1 year validity
   - Auto-renewal 30 days before expiry
   - cert-manager managed Secret

5. Documentation inline (comprehensive comments)

Modified Files (4 files):
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1. pkg/datastorage/server/server.go
   - Added signer field to Server struct
   - Added loadSigningCertificate() function
   - Added generateFallbackCertificate() for de

--- a/deploy/data-storage/deployment.yaml
+++ b/deploy/data-storage/deployment.yaml
@@ -126,6 +126,10 @@ spec:
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            # SOC2 Day 9.1: Signing certificate for audit export
+            - name: signing-cert
+              mountPath: /etc/certs
+              readOnly: true
       volumes:
         - name: tmp
           emptyDir: {}
@@ -136,6 +140,12 @@ spec:
             items:
               - key: cookie-secret
                 path: cookie-secret
+        # SOC2 Day 9.1: Signing certificate (managed by cert-manager)
+        # Certificate: deploy/data-storage/certificate.yaml
+        # Format: tls.crt, tls.key (cert-manager compatible)
+        - name: signing-cert
+          secret:
+            secretName: datastorage-signing-cert
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 
