--- a/deploy/data-storage/kustomization.yaml
+++ b/deploy/data-storage/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - configmap.yaml
   - secret.yaml
   - certificate.yaml  # SOC2 Day 9.1: Signing certificate (cert-manager)
+  - audit-rbac.yaml  # SOC2 Day 10.1: Tiered RBAC for audit operations
   - deployment.yaml
   - service.yaml
   - servicemonitor.yaml
