feat(soc2): Day 10.2 - PII redaction for audit exports
Priority: 🎯 SOC2 Day 10.2 - Privacy Compliance
Status: ✅ COMPLETE - PII redaction implemented

SOC2 Privacy Compliance:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✅ Data minimization principle enforced
✅ PII redaction for external auditors
✅ Compliance reports for legal teams
✅ Anonymized analysis capability

Redaction Rules:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
- Emails: user@domain.com → u***@d***.com
- IP Addresses: 192.168.1.1 → 192.***.*.***
- Phone Numbers: +1-555-1234 → +1-***-****

API Integration:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
New Query Parameter: `redact_pii=true`
Endpoint: GET /api/v1/audit/export?redact_pii=true

Redacted Fields:
- export_metadata.exported_by (if email)
- events[].event_data.user_email
- events[].event_data.source_ip
- events[].event_data.phone_number
- All PII fields in event_data (extensible)

Implementation Details:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
New Package: pkg/pii/redactor.go
- Regex-based PII detection (email, IPv4, phone)
- Recursive JSON redaction
- Targeted field redaction (by name)
- Extensible pattern support

Integration Points:
- pkg/datastorage/repository/audit_export.go (ExportFilters.RedactPII)
- pkg/datastorage/server/audit_export_handler.go (applyPIIRedaction)
- api/openapi/data-storage-v1.yaml (redact_pii parameter)

Redaction Flow:
1. Parse `redact_pii` query parameter
2. Export audit events (with hash chain verification)
3. Build response with digital signature
4. Apply PII redaction (AFTER hash chain verification)
5. Return redacted export

Key Design Decision:
- Redaction occurs AFTER hash chain verification to maintain audit integrity
- Original hashes preserved (computed on unredacted data)
- Redacted exports still verifiable via digital signature

Use Cases:
- Sharing exports with external auditors (no PII exposure)
- Compliance reports for legal teams (pr

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -861,6 +861,34 @@ paths:
             maximum: 10000
             default: 1000
           description: Maximum records per export
+        - name: redact_pii
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
+          description: |
+            Enable PII (Personally Identifiable Information) redaction in audit export.
+            
+            **SOC2 Privacy Compliance**: Redacts sensitive data to comply with data minimization principles.
+            
+            **Redaction Rules**:
+            - Emails: user@domain.com → u***@d***.com
+            - IP Addresses: 192.168.1.1 → 192.***.*.***
+            - Phone Numbers: +1-555-1234 → +1-***-****
+            
+            **Fields Redacted**:
+            - event_data.user_email
+            - event_data.source_ip
+            - event_data.phone_number
+            - exported_by (if email)
+            
+            **Use Cases**:
+            - Sharing exports with external auditors
+            - Compliance reports for legal teams
+            - Anonymized analysis and research
+            
+            Note: Redaction occurs AFTER hash chain verification to maintain integrity.
       responses:
         '200':
           description: Export generated successfully
