fix(api): Add MaxRetriesExceeded to AIAnalysis subReason enum
Root cause: Controller was setting status.subReason to 'MaxRetriesExceeded'
when HolmesGPT API calls exceeded retry limit, but this value was missing
from the CRD enum validation.

Error:
  status.subReason: Unsupported value: "MaxRetriesExceeded": supported values:
  "WorkflowNotFound", "ImageMismatch", "ParameterValidationFailed",
  "NoMatchingWorkflows", "LowConfidence", "LLMParsingError",
  "ValidationError", "TransientError", "PermanentError",
  "InvestigationInconclusive", "ProblemResolved"

Impact:
- Graceful shutdown integration test timing out after 60s
- AIAnalysis reconciliation stuck in infinite requeue loop
- Status updates failing with validation error

Fix:
- Added 'MaxRetriesExceeded' to subReason enum in aianalysis_types.go
- Regenerated CRD manifests with 'make manifests'

Location of usage:
- pkg/aianalysis/handlers/investigating.go:242 (status update)
- pkg/aianalysis/handlers/investigating.go:245 (metrics recording)

This allows the controller to properly record when API retries are exhausted
and transition the AIAnalysis to Failed state.

--- a/config/crd/bases/kubernaut.ai_aianalyses.yaml
+++ b/config/crd/bases/kubernaut.ai_aianalyses.yaml
@@ -1083,6 +1083,7 @@ spec:
                 - PermanentError
                 - InvestigationInconclusive
                 - ProblemResolved
+                - MaxRetriesExceeded
                 type: string
               targetInOwnerChain:
                 description: |-
