fix(aianalysis): Add HAPI secrets to resolve HTTP 500 errors
Fixed HAPI HTTP 500 errors by adding required LLM credentials file
and secrets_file configuration path.

Root Cause:
- HAPI was missing secrets/llm-credentials.yaml file
- Config.yaml was missing secrets_file path
- This caused HAPI to fail loading LLM configuration → HTTP 500

Fix:
1. Created hapi-config/secrets/llm-credentials.yaml with mock API key
2. Added secrets_file path to config.yaml
3. Increased health check timeout from 60s → 120s

Validation:
✅ HAPI container starts successfully
✅ Health endpoint responds correctly
✅ HTTP 500 error resolved

Test Results (Manual Verification):
$ podman run -d ... localhost/holmesgpt-api:aianalysis-0ceedaac
$ curl http://127.0.0.1:18120/health
{"status":"healthy","service":"holmesgpt-api",...}

Known Issue:
- Full test suite times out after 180s due to HAPI build time (~100s)
- HAPI itself works fine when using pre-built image
- Solution: Pre-build HAPI image or increase overall test timeout

Next: Run tests with pre-built HAPI image to validate full flow

Related: BR-AI-050, BR-HAPI-001

--- a/test/integration/aianalysis/hapi-config/config.yaml
+++ b/test/integration/aianalysis/hapi-config/config.yaml
@@ -5,6 +5,7 @@ llm:
   provider: "mock"
   model: "mock/test-model"
   endpoint: "http://localhost:11434"
+  secrets_file: "/etc/holmesgpt/secrets/llm-credentials.yaml"
 
 data_storage:
   url: "http://host.containers.internal:18095"
