feat(ogen): Add Gap #5/#6 event types to OpenAPI + complete audit manager migration
MAJOR MILESTONE: OpenAPI spec updated + ogen regenerated + core code migrated

1. OpenAPI Spec (api/openapi/data-storage-v1.yaml)
- Added 'workflow.selection.completed' (Gap #5)
- Added 'execution.workflow.started' (Gap #6)
- Regenerated ogen client with new constructors

2. WE Audit Manager (pkg/workflowexecution/audit/manager.go)
- Use proper Gap #5/Gap #6 constructors
- Add EventType to all payloads for discriminator
- All 4 audit methods migrated (Selection, Execution, recordAudit, recordFailure)

3. Controller (internal/controller/workflowexecution/audit.go)
- Migrate to ogen types + union constructors
- Fix optional fields with .SetTo()
- Cast enums properly

4. Test Utils (pkg/testutil/audit_validator.go)
- Fix CorrelationID casing
- Fix Severity OptNilString usage
- Remove unstructured EventData cast

COMPILATION: Core code compiles ✅
REMAINING: Integration test API usage

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1417,6 +1417,8 @@ components:
               'workflowexecution.workflow.started': '#/components/schemas/WorkflowExecutionAuditPayload'
               'workflowexecution.workflow.completed': '#/components/schemas/WorkflowExecutionAuditPayload'
               'workflowexecution.workflow.failed': '#/components/schemas/WorkflowExecutionAuditPayload'
+              'workflow.selection.completed': '#/components/schemas/WorkflowExecutionAuditPayload'  # Gap #5 (BR-AUDIT-005)
+              'execution.workflow.started': '#/components/schemas/WorkflowExecutionAuditPayload'    # Gap #6 (BR-AUDIT-005)
               'webhook.notification.cancelled': '#/components/schemas/NotificationAuditPayload'
               'webhook.notification.acknowledged': '#/components/schemas/NotificationAuditPayload'
               'webhook.workflow.unblocked': '#/components/schemas/WorkflowExecutionWebhookAuditPayload'
