--- a/test/e2e/notification/manifests/notification-configmap.yaml
+++ b/test/e2e/notification/manifests/notification-configmap.yaml
@@ -24,7 +24,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: notification-controller-config
-  namespace: notification-e2e
+  # NOTE: Namespace omitted - uses kubectl apply -n flag for dynamic namespace
+  # This allows E2E tests to use any namespace (notification-e2e, test-*, etc.)
 data:
   config.yaml: |
     # ========================================
