fix(notification-e2e): Fix hardcoded namespace in ConfigMap data_storage_url
🔧 ROOT CAUSE: Hardcoded namespace preventing DataStorage connection

PROBLEM:
- notification-configmap.yaml line 91 had hardcoded namespace
- data_storage_url: http://datastorage.notification-e2e.svc.cluster.local:8080
- Controller could not connect to DataStorage if deployed to different namespace
- This caused audit emission failures and affected controller initialization
- File delivery tests failed because controller couldn't function properly

FIX APPLIED:
1. ✅ Changed data_storage_url to use ${NAMESPACE} placeholder
2. ✅ Updated deployNotificationConfigMap() to use envsubst
3. ✅ Now dynamically substitutes correct namespace during deployment

PATTERN:
- Same issue we fixed before (commit cf7186a0b) for ConfigMap metadata
- But we missed the hardcoded namespace INSIDE the ConfigMap data

EXPECTED IMPACT:
- Controller can now connect to DataStorage in any namespace
- Audit emission should work correctly
- File delivery tests should pass (was blocked by audit failures)
- 14/19 → Expected: 19/19 passing (100%)

RELATED:
- Same pattern as AuthWebhook namespace fix
- Consistent with other manifest envsubst usage

Authority: DD-NOT-006 v2, BR-NOTIFICATION-001

--- a/test/e2e/notification/manifests/notification-configmap.yaml
+++ b/test/e2e/notification/manifests/notification-configmap.yaml
@@ -88,7 +88,8 @@ data:
       # Data Storage service URL (REQUIRED by ADR-032 for audit)
       # Used for audit event emission and persistent storage
       # Format: http://{service}.{namespace}.svc.cluster.local:{port}
-      data_storage_url: "http://datastorage.notification-e2e.svc.cluster.local:8080"
+      # NOTE: ${NAMESPACE} is substituted by envsubst during deployment
+      data_storage_url: "http://datastorage.${NAMESPACE}.svc.cluster.local:8080"
 
 # ========================================
 # Deployment Integration (ADR-030 Pattern)
