refactor(signalprocessing): Phase 2b - Complete PostgreSQL refactoring (HTTP Anti-Pattern)
HTTP Anti-Pattern Refactoring - Phase 2 (SignalProcessing) - COMPLETE

CHANGES - audit_integration_test.go:
1. Refactored ALL 7 test cases to use PostgreSQL direct queries
2. Removed context import (no longer needed)
3. Replaced HTTP audit queries with testDB.QueryRow SQL queries

TEST CASES REFACTORED:
1. ✅ Signal Processing Completion Auditing
   - Query signal.processed events via PostgreSQL
   - Validate event_data JSONB fields (environment, priority)

2. ✅ Classification Decision Auditing
   - Query classification.decision events via PostgreSQL
   - Validate classification fields (environment, priority)

3. ✅ Enrichment Completion Auditing
   - Query enrichment.completed events via PostgreSQL
   - Validate enrichment fields (has_namespace, has_pod, degraded_mode)
   - Validate duration_ms performance tracking

4. ✅ Phase Transition Auditing
   - Query all phase.transition events via PostgreSQL
   - Count exact transitions (Pending→Enriching→Classifying→Categorizing→Completed)
   - Validate 4 transitions per successful processing (DD-TESTING-001)

5. ✅ Error Auditing
   - Query error.occurred OR signal.processed events via PostgreSQL
   - Handle both fatal errors and degraded mode completion
   - Validate EventOutcome=failure for errors
   - Validate error_message field structure

6. ✅ Fatal Enrichment Error Test (SP-BUG-003/004)
   - Query error.occurred events for namespace not found
   - Validate phase=Enriching and error message content
   - Validate fatal error path (not degraded mode)

7. ✅ Business Classification Auditing (AUDIT-06, BR-SP-002)
   - Query business.classified events via PostgreSQL
   - Validate business_unit field (payments team)

TECHNICAL IMPROVEMENTS:
- PostgreSQL queries use parameterized statements (cd /Users/jgil/go/src/github.com/jordigilh/kubernaut && git add -A && git commit -m "refactor(signalprocessing): Phase 2b - Complete PostgreSQL refac

--- a/test/infrastructure/kind-remediationorchestrator-config.yaml
+++ b/test/infrastructure/kind-remediationorchestrator-config.yaml
@@ -43,11 +43,9 @@ nodes:
   - containerPort: 30284
     hostPort: 8183
     protocol: TCP
-  # Extra mounts for coverage data collection (DD-TEST-007)
-  extraMounts:
-  - hostPath: ./coverdata
-    containerPath: /coverdata
-    readOnly: false
+  # Extra mounts for coverage data collection (DD-TEST-007) and notification output
+  # Note: ALL extraMounts are added programmatically in SetupROInfrastructureHybridWithCoverage
+  # based on OS (macOS vs Linux) to handle path differences between environments
   # Increase API server rate limits for parallel integration testing
   kubeadmConfigPatches:
   - |
