--- a/config/crd/bases/kubernaut.ai_notificationrequests.yaml
+++ b/config/crd/bases/kubernaut.ai_notificationrequests.yaml
@@ -114,30 +114,6 @@ spec:
                   - log
                   type: string
                 type: array
-              fileDeliveryConfig:
-                description: |-
-                  File delivery configuration
-                  Required when ChannelFile is specified in Channels array
-                  Specifies output directory and format for file-based notifications
-                  Used for audit trails and compliance logging (BR-NOT-034)
-                properties:
-                  format:
-                    default: json
-                    description: File format (json, yaml)
-                    enum:
-                    - json
-                    - yaml
-                    type: string
-                  outputDirectory:
-                    description: |-
-                      Output directory for notification files
-                      Required when ChannelFile is specified
-                      Directory must exist and be writable by the controller
-                    minLength: 1
-                    type: string
-                required:
-                - outputDirectory
-                type: object
               metadata:
                 additionalProperties:
                   type: string
@@ -184,6 +160,52 @@ spec:
                       type: string
                   type: object
                 type: array
+              remediationRequestRef:
+                description: |-
+                  Reference to parent RemediationRequest (if applicable)
+                  Used for audit correlation and lineage tracking (BR-NOT-064)
+                  Optional: NotificationRequest can be standalone (e.g., system-generated alerts)
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: |-
+                      If referring to a piece of an object instead of an entire object, this string
+                      should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within a pod, this would take on a value like:
+                      "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]" (container with
+                      index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                      referencing a part of an object.
+                    type: string
+                  kind:
+                    description: |-
+                      Kind of the referent.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                    type: string
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                    type: string
+                  resourceVersion:
+                    description: |-
+                      Specific resourceVersion to which this reference is made, if any.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                    type: string
+                  uid:
+                    description: |-
+                      UID of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               retentionDays:
                 default: 7
                 description: Retention period in days after completion
